--- a/index.html
+++ b/index.html
@@ -138,10 +138,35 @@
             </div>
         </div>
 
+    </article>
 
+    <section class="bg-contrast" id="sobre">
+        <div class="container sobre">
+            <img src="assets/images/elooLocation.webp" alt="Foto do escritório">
+            <div class="sobre-content">
+                <h1 class="font-head-h4 text-h3"><span class="golden-text">Eloo Contabilidade</span>: Mais que Números, um Parceiro para o Seu Sucesso</h1>
+                <img src="assets/icon/linhaDourada.svg" alt="linha dourada" />
+                <p class="font-text-s text-thin-2 ">Na <span class="golden-text">Eloo Contabilidade</span>, não somos apenas contadores, somos parceiros no seu crescimento. Nosso compromisso é com a excelência e com a transformação de desafios em oportunidades. Com nossa equipe especializada, impulsionamos seus objetivos de negócios além dos relatórios financeiros. Venha crescer com a Eloo. </p>
+            </div>
+        </div>
+    </section>
+
+    <article class="container" id="depoimentos">
+
+        <h1 class="font-head-h5 text-h3">O que dizem <span class="golden-text">sobre nós</span></h1>
+
+        <div class="slide-wrapper">
+            <ul class="slide">
+            </ul>
+        </div>
+        <div class="arrow-nav">
+            <button style="display: none;" class="prev">Prev</button>
+            <button style="display: none;" class="next">Next</button>
+        </div>
     </article>
 
     <script src="assets/script.js"></script>
+    <script type="module" src="assets/module.js"></script>
 </body>
 
 </html>
