seção clientes adicionada

--- a/index.html
+++ b/index.html
@@ -114,8 +114,10 @@
             <div class="items ">
                 <h3 class="font-h3-s text-h3 ">Otimização e Análise Tributária:</h3>
                 <p class="font-text-m text-thin-2">
-                    Nossa expertise inclui uma revisão completa das suas obrigações fiscais, identificando oportunidades de economia tributária dentro da legalidade.<br>
-                    <strong>Beneficío</strong>:  Reduza custos através de planejamento tributário eficiente e estratégias de minimização de impostos.
+                    Nossa expertise inclui uma revisão completa das suas obrigações fiscais, identificando oportunidades
+                    de economia tributária dentro da legalidade.<br>
+                    <strong>Beneficío</strong>: Reduza custos através de planejamento tributário eficiente e estratégias
+                    de minimização de impostos.
                 </p>
             </div>
 
@@ -123,8 +125,10 @@
             <div class="items ">
                 <h3 class="font-h3-s text-h3">Estratégias Personalizadas de Crescimento:</h3>
                 <p class="font-text-m text-thin-2">
-                    Desenvolvemos estratégias financeiras customizadas que alinham-se com os objetivos específicos do seu negócio. <br>
-                    <strong>Beneficío</strong>: Cresça de maneira inteligente e sustentável, maximizando lucros e minimizando riscos.
+                    Desenvolvemos estratégias financeiras customizadas que alinham-se com os objetivos específicos do
+                    seu negócio. <br>
+                    <strong>Beneficío</strong>: Cresça de maneira inteligente e sustentável, maximizando lucros e
+                    minimizando riscos.
                 </p>
             </div>
 
@@ -132,8 +136,10 @@
             <div class="items ">
                 <h3 class="font-h3-s text-h3">Relatórios e Insights Financeiros:</h3>
                 <p class="font-text-m text-thin-2">
-                    Fornecemos relatórios personalizados detalhados e insights financeiros que ajudam na tomada de decisões mais informadas.<br>
-                    <strong>Beneficío</strong>: Tome decisões baseadas em dados, não em suposições, com nossa consultoria baseada em evidências.
+                    Fornecemos relatórios personalizados detalhados e insights financeiros que ajudam na tomada de
+                    decisões mais informadas.<br>
+                    <strong>Beneficío</strong>: Tome decisões baseadas em dados, não em suposições, com nossa
+                    consultoria baseada em evidências.
                 </p>
             </div>
         </div>
@@ -142,11 +148,15 @@
 
     <section class="bg-contrast" id="sobre">
         <div class="container sobre">
-            <img src="assets/images/elooLocation.webp" alt="Foto do escritório">
+            <img class="location" src="assets/images/elooLocation.webp" alt="Foto do escritório">
             <div class="sobre-content">
-                <h1 class="font-head-h4 text-h3"><span class="golden-text">Eloo Contabilidade</span>: Mais que Números, um Parceiro para o Seu Sucesso</h1>
+                <h1 class="font-head-h4 text-h3"><span class="golden-text">Eloo Contabilidade</span>: Mais que Números,
+                    um Parceiro para o Seu Sucesso</h1>
                 <img src="assets/icon/linhaDourada.svg" alt="linha dourada" />
-                <p class="font-text-s text-thin-2 ">Na <span class="golden-text">Eloo Contabilidade</span>, não somos apenas contadores, somos parceiros no seu crescimento. Nosso compromisso é com a excelência e com a transformação de desafios em oportunidades. Com nossa equipe especializada, impulsionamos seus objetivos de negócios além dos relatórios financeiros. Venha crescer com a Eloo. </p>
+                <p class="font-text-s text-thin-2 ">Na <span class="golden-text">Eloo Contabilidade</span>, não somos
+                    apenas contadores, somos parceiros no seu crescimento. Nosso compromisso é com a excelência e com a
+                    transformação de desafios em oportunidades. Com nossa equipe especializada, impulsionamos seus
+                    objetivos de negócios além dos relatórios financeiros. Venha crescer com a Eloo. </p>
             </div>
         </div>
     </section>
@@ -165,8 +175,33 @@
         </div>
     </article>
 
+    <aside class="container costumers" id="costumers">
+        <h2 class="font-head-h5 text-h3">Alguns dos <span class="golden-text">nossos clientes</span></h2>
+
+        <div class="slider" >
+            <div class="list">
+                <div class="item" style="--position:1"><img src="assets/clientes/cli1.webp" alt=""></div>
+                <div class="item" style="--position:2"><img src="assets/clientes/cli2.webp" alt=""></div>
+                <div class="item" style="--position:3"><img src="assets/clientes/cli3.webp" alt=""></div>
+                <div class="item" style="--position:4"><img src="assets/clientes/cli4.webp" alt=""></div>
+                <div class="item" style="--position:5"><img src="assets/clientes/cli5.webp" alt=""></div>
+                <div class="item" style="--position:6"><img src="assets/clientes/cli6.webp" alt=""></div>
+                <div class="item" style="--position:7"><img src="assets/clientes/cli7.webp" alt=""></div>
+                <div class="item" style="--position:8"><img src="assets/clientes/cli8.webp" alt=""></div>
+                <div class="item" style="--position:9"><img src="assets/clientes/cli9.webp" alt=""></div>
+            </div>
+        </div>
+    </aside>
+
+    <section class="FAQ" id="FAQ" aria-label=""> 
+        <div class="">
+
+        </div>
+    </section>
+
+
+
     <script src="assets/script.js"></script>
     <script type="module" src="assets/module.js"></script>
 </body>
-
 </html>
